@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.4
 
+	- 'Enter' key event on OS X would not set Fl::e_text;
 	- Changed behaviour of fluid to always paste into
 	  a selected group (STR #88)
 	- Menuitem now changes font, even if fontsize
